--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     kapt "com.sun.xml.bind:jaxb-impl:2.3.2"
     annotationProcessor "com.sun.xml.bind:jaxb-core:2.3.0.1"
     annotationProcessor "javax.xml.bind:jaxb-api:2.3.1"
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 }
